--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "backend-project",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend project for the MERN stack",
   "license": "ISC",
   "author": "Ayush Gupta",
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "dev": "nodemon src/index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
